[gd_scene load_steps=2 format=3 uid="uid://bv7yj0rbs6kd"]

[ext_resource type="Script" uid="uid://cg5xd8ac6qfkb" path="res://scenes/big_test.gd" id="1_errlg"]

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_errlg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1"
alignment = 0

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "10"
alignment = 0

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "100"
alignment = 0

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1000"
alignment = 0

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "10000"
alignment = 0

[node name="Button6" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "100000"
alignment = 0

[node name="Button7" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1000000"
alignment = 0

[node name="Button8" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "10000000"
alignment = 0

[node name="Button9" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "100000000"
alignment = 0

[node name="Button10" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1000000000"
alignment = 0
